ZG-2008-06-04-0: Enhancem.: o Added ping_daemon procedure. 
                            o Execd start up test for CR 6609754
                 Review:    AP

LP-2008-06-04-0: Enhancem.: Modified install message
                 Review:    MP

CR-2008-06-04-0: Bugfix:    Fixed broken hedeby checktree test: 
                            resources/move/inprocess/check.62.exp
                 Review:    RH

DG-2008-06-04-0: Cleanup:   Install didn't install HP11 32 bit binaries when 
                            compiling on HP11 64 bit host. This failure was 
                            introduced with gridengine checkin DG-2008-05-15-0.
                 Review:    JG

RM-2008-06-03-0: Cleanup:   hedeby, installation of managed host no longer prints
                            license -al switch removed
                 Review:    MG

RH-2008-05-30-0: Bugfix:    wait_from_remote_file did not work with binary files
                 Enhancem.: checktree_hedeby
                            o new test: components/ge/stop/stop_and_free_resources
                            o new test: components/spare_pool/stop/stop_and_free_resources
                            o new method mod_hedeby_resource in util.tcl
                 Review:    CR

DG-2008-05-27-0: Enhancem.: Test for qrsh -notify added. 
                 Issue:     11
                 Review:    JG

MG-2008-05-21-1: Enhancem.: o Added new test: "cli/comp_lifecycle/ge_adapter/check.62.exp"
                              (Part 3/8 of hedeby issue #233)
                              (Need test for restarts of the components)
                 Review:    RM

MG-2008-05-21-0: Enhancem.: o Added new test: "cli/comp_lifecycle/ca_restart/check.62.exp"
                              (Part 2/8 of hedeby issue #233)
                              (Need test for restarts of the components)
                 Review:    RM

DG-2008-05-19-0: Cleanup:   Because aimk now supports building 32 bit binaries